fix: footer overflow

--- a/main.css
+++ b/main.css
@@ -97,6 +97,10 @@ h2 {
   margin-right: 15%;
 }
 
+.footer {
+  padding-bottom: 15px;
+}
+
 @media only screen and (max-width: 1300px) {
   .container .content .item {
     width: 43%;
